Reformatted the interface a bit. No extra margin on top of the controller and emoji picker now is fixed to the bottom right for convenience

--- a/client/src/components/css/Widget.css
+++ b/client/src/components/css/Widget.css
@@ -78,8 +78,9 @@
 }
 
 .emoji_picker {
-  position: relative;
-  
+  position: fixed;
+  bottom: 0.7rem;
+  right: 0.7rem;
 }
 
 .live_emoji {
