--- a/client/src/css/PlayerPage.css
+++ b/client/src/css/PlayerPage.css
@@ -4,7 +4,6 @@
   width: auto;
   height: fit-content;
   padding-right: 1.3rem;
-  margin-top: 1.6rem;
   margin-bottom: 1.2rem;
   align-self: center
 }
